icon (in progress)

--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -9,7 +9,9 @@
     MinWidth="300"
     MinHeight="250"
     ui:WindowHelper.UseModernWindowStyle="True"
-    WindowStartupLocation="CenterScreen" Loaded="Window_Loaded" Closing="Window_Closing">
+    Closing="Window_Closing"
+    Loaded="Window_Loaded"
+    WindowStartupLocation="CenterScreen">
     <Window.Resources />
     <Grid Margin="10">
         <Grid.RowDefinitions>
@@ -20,9 +22,28 @@
         <ListBox
             x:Name="ChooserVersions"
             Grid.Row="1"
-            DisplayMemberPath="Name"
             MouseDoubleClick="ChooserVersions_MouseDoubleClick"
-            SelectedValuePath="Path" />
+            SelectedValuePath="Path">
+            <ListBox.ItemTemplate>
+                <DataTemplate>
+                    <StackPanel
+                        Margin="0"
+                        VerticalAlignment="Stretch"
+                        Orientation="Horizontal">
+                        <Image
+                            Width="25"
+                            Height="25"
+                            Margin="0,0,0,0"
+                            VerticalAlignment="Center"
+                             Source="{Binding Icon}" />
+                        <TextBlock
+                            Margin="5,0,0,0"
+                            VerticalAlignment="Center"
+                            Text="{Binding Name}" />
+                    </StackPanel>
+                </DataTemplate>
+            </ListBox.ItemTemplate>
+        </ListBox>
         <StackPanel
             Grid.Row="2"
             Margin="0,10,0,0"
